tests-system/union-type-nonrecord/output
parent      [Integer, TypeA]
             ^^^^^^^ union-type-nonrecord/test.rsl:9: error: Builtin_Integer Integer is not a Record_Type
Processed 1 model and 1 requirement file and found 1 error
